added security and updated the code